[gd_scene load_steps=2 format=3 uid="uid://dfq6x5iabt4xo"]

[ext_resource type="Script" path="res://Scripts/Widgets/select_chart_item.gd" id="1_87wtc"]

[node name="select_chart_item" type="PanelContainer"]
script = ExtResource("1_87wtc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "歌曲名称"

[node name="ArLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "staff
"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="selected" from="." to="." method="_on_selected"]
